--- a/typer.html
+++ b/typer.html
@@ -1,25 +1,46 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
 	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
+	* {
+	  margin: 0;
+	  padding: 0;
+	}
+
+	html,
+	body,
+	canvas {
+	  width: 100%;
+	  height: 100%;
+	}
+
+	canvas {
+	  position: absolute;
+	}
 	</style>
+	<script src="app.js" charset="utf-8"></script>
 	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
-</head> 
+	<script src="Word.js"></script>
+</head>
+
 <body>
-	<canvas></canvas>
+
+	<main role="main">
+		<div id="home-view">
+			<h1>Typer</h1>
+			Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida. <br>
+			<input type="text" id="name" placeholder="name">
+			<a href="#game-view">Start</a>
+		</div>
+
+		<div id="game-view">
+			<canvas></canvas>
+		</div>
+	</main>
+
 </body>
+
 </html>
