--- a/typer.html
+++ b/typer.html
@@ -5,25 +5,12 @@
 	<meta charset="UTF-8">
 	<title>typer</title>
 	<style>
-	* {
-	  margin: 0;
-	  padding: 0;
-	}
 
-	html,
-	body,
-	canvas {
-	  width: 100%;
-	  height: 100%;
-	}
-
-	canvas {
-	  position: absolute;
-	}
 	</style>
 	<script src="app.js" charset="utf-8"></script>
 	<script src="TYPER.js"></script>
 	<script src="Word.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -37,8 +24,14 @@
 		</div>
 
 		<div id="game-view">
+			<div id="playerName"></div>
+			<div id="playerScore" class="playerScore">
+				Score:<div id="currentScore">0</div>
+			</div>
 			<canvas></canvas>
 		</div>
+
+		
 	</main>
 
 </body>
