Game files added

--- a/typer.html
+++ b/typer.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>typer</title>
-	<style> 
+	<title>typer the game</title>
+	<style>
 		* {
 			margin: 0;
 			padding: 0;
