--- a/typer.html
+++ b/typer.html
@@ -28,10 +28,17 @@
 			<div id="playerScore" class="playerScore">
 				Score:<div id="currentScore">0</div>
 			</div>
+			<div id="playerMistake">
+				Mistakes:<div id="mistake">0</div>
+			</div>
 			<canvas></canvas>
 		</div>
 
-		
+		<div id="end-view">
+			<h1>END</h1>
+		</div>
+
+
 	</main>
 
 </body>
