index & style.css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>typer</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="TYPER.js"></script>
+    <script src="Word.js"></script>
 </head>
 <body>
-$END$
+<div class="wrapper">
+    <div>
+        <h1>Welcome to Typ3r!</h1>
+        <p>Typ3r is a word typing game</p>
+    </div>
+</div>
 </body>
 </html>
