--- a/typer.html
+++ b/typer.html
@@ -3,19 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
