--- a/typer.html
+++ b/typer.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>typer</title>
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="TYPER.js"></script>
+    <meta charset="UTF-8">
+    <title>typer</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+<canvas id="nightMode" onclick="nightMode()"></canvas>
 </body>
 </html>
