--- a/typer.html
+++ b/typer.html
@@ -3,23 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css" />
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+	<div id="kaka">
+		<div id="scoretable">
+			<div id="scorebox">
+				<div>
+					
+					<div>username: <span id="username">Tundmatu</span></div>
+				</div>
+				<div>score: 
+					<span id="score">0</span>
+				</div>
+				<div>Vigu: <span id="vale">0</span></div>
+			</div>
+		</div>
+		<canvas id="kast"></canvas>
+	</div>
 </body>
 </html>
