Play Typ3r button index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
         <h1>Welcome to Typ3r!</h1>
         <p>Typ3r is a word typing game</p>
+        <button class="btn" onclick="location.href='typer.html'">Play Typ3r!</button>
     </div>
 </div>
 </body>
