--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div>
         <h1>Welcome to Typ3r!</h1>
         <p>Typ3r is a word typing game</p>
-        <button class="btn" onclick="location.href='typer.html'">Play Typ3r!</button>
+        <br>
+        <button class="btn" onclick="location.href='typer.html'">>>Play Typ3r!<<</button>
+        <div id="result"></div>
     </div>
 </div>
 </body>
