--- a/typer.html
+++ b/typer.html
@@ -1,25 +1,87 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+            integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+            crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>typer</title>
 </head>
+
 <body>
-	<canvas></canvas>
+<div class="container">
+    <nav class="menu">
+        <ul class="menu-list">
+            <li class="menu-item"><a href="#home-view" class="menu-link home-view active-menu">Avaleht</a></li>
+            <li class="menu-item"><a href="#list-view" class="menu-link list-view">Mäng</a></li>
+            <li class="menu-item"><a href="#stats-view" class="menu-link list-view">Statistika</a></li>
+        </ul>
+    </nav>
+
+    <main role="main">
+
+        <div id="list-view">
+            <h1>Mäng</h1>
+            <p class="loading">Laeb...</p><br>
+            <p id="score">Punktid: 0</p>
+            <span>Sekundid on jäänuud:</span>
+            <div id="timer_inp">10</div>
+
+            <p class="words">
+                <canvas></canvas>
+            </p>
+            <!--  <ul class="list-of-jars"></ul> -->
+        </div>
+        <div id="home-view">
+            <div style="float: left;">
+                <div class="page-header" style="padding-bottom: 20px"><h1>Tere tulemast Typer mängule!</h1></div>
+
+                <p>Sa alustad 10 sekundiga</p>
+                <p>Iga sõna eest sa saad ühe punkti ja lisa sekundid!</p>
+                <ul>
+                    <li>Sõna pikkus on 3: 1 sekund</li>
+                    <li>Sõna pikkus on 4: 2 sekundit</li>
+                    <li>Ülejäänud: 4 sekundit</li>
+                </ul>
+                <p class="text-danger">Iga vea eest sa saad trahvi: 5 sekundid!</p>
+            </div>
+            <div style="float: right;">
+                <p>Parimad mängijad</p>
+                <ul class="list-group" style="width: 250px;;">
+
+                </ul>
+            </div>
+        </div>
+
+        <div id="stats-view">
+            <h1>Statistika</h1>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nimi</th>
+                    <th>Punktid</th>
+                    <th>Vead</th>
+                    <th>Keskmine kiirus</th>
+                </tr>
+                </thead>
+
+            </table>
+        </div>
+    </main>
+</div>
 </body>
+<script src="typ.js"></script>
+<script src="Word.js"></script>
+
 </html>
