--- a/typer.html
+++ b/typer.html
@@ -1,9 +1,22 @@
+
+
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
+<link rel="stylesheet" type="text/css" href="design.css">
+
+
 <!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
+	<style>
 		* {
 			margin: 0;
 			padding: 0;
@@ -13,13 +26,26 @@
 			height: 100%;
 		}
 		canvas {
-			position: absolute;
+		sosition: absolute;
+			background-color: white;
+			transition-duration: 0.35s;
+			animation: bgfade 0.35s;
 		}
+		@keyframes bgfade{
+			0%{opacity: 1;}
+			50%{opacity: 0;}
+			100%{opacity: 1;}
+		}.canvas2{
+			width: 40%;
 	</style>
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+<!--
+<a class="waves-effect waves-light btn" style="width: 100%;height: 100%;visibility: hidden" ondblclick="darkMode()">
+-->
+
+	<canvas id="bg" onclick="darkMode()"></canvas>
 </body>
 </html>
