--- a/welcome.html
+++ b/welcome.html
@@ -43,6 +43,7 @@
 
     <script src="TYPER.js" defer></script>
     <script src="Word.js"></script>
+    <script src="topten.js"></script>
 </head>
 <body><div >
     <center><h1>Typer</h1>
@@ -76,7 +77,9 @@
                 <div>
                     <blockquote style="border-left-color: #013060 !important;">
                         <h3 style="font-weight: bold;color: maroon">Sinu TOP 10:</h3>
+                        <a id="loadTop" class="waves-effect waves-light btn enabled" onclick="playerName();hide('loadTop')">Lae top mängijad...</a>
                             <div id="playerName" >
+
                             </div>
                     </blockquote>
                 </div>
@@ -96,4 +99,3 @@
 
 </body>
 </html>
-
