--- a/welcome.html
+++ b/welcome.html
@@ -78,8 +78,7 @@
                     <blockquote style="border-left-color: #013060 !important;">
                         <h3 style="font-weight: bold;color: maroon">Sinu TOP 10:</h3>
                         <a id="loadTop" class="waves-effect waves-light btn enabled" onclick="playerName();hide('loadTop')">Lae top mängijad...</a>
-                            <div id="playerName" >
-
+                            <div id="playerName" class="topTen">
                             </div>
                     </blockquote>
                 </div>
