--- a/typer.html
+++ b/typer.html
@@ -3,23 +3,45 @@
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+  <link rel="stylesheet" href="style.css">
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+
+	<!-- MENÜÜ -->
+	    <nav class="menu">
+	        <ul class="menu-list">
+	            <li class="menu-item"><a href="#home-view" class="menu-link home-view active-menu">Avaleht</a></li>
+	            <li class="menu-item"><a href="#game-view" class="menu-link list-view">Mäng</a></li>
+	        </ul>
+	    </nav>
+			<main role="main">
+
+        <!-- AVALEHT -->
+        <div id="home-view">
+            <h1>Avaleht</h1>
+						<p>
+							Tegemist on väga ägeda mänguga, mille eesmärgiks on võimalikult kiiresti ekraanile ilmuvaid sõnu kirjutada !
+						</p>
+
+						<h1>Top 10</h1>
+						<div id="topPlayers"></div>
+						<button type="button"><a href="#game-view">Mängima</a></button>
+						<p>Autor: Tanel Otsa</p>
+        </div>
+
+				<!-- Mänguleht -->
+        <div  id="game-view">
+						<h3><div class="gamerInfo1" id="gamerName"></div></h3>
+						<h3><div class="gamerInfo2" id="gamerScore"></div></h3>
+						<h3><div class="gamerInfo3" id="gamerLives"></div></h3>
+						<div id="gameOver" class="gameOver"></div>
+						<canvas id="game" class="game"></canvas>
+						<button type="button" class="restart" id="restart">Uuesti</button>
+        </div>
+
+	    </main>
+
 </body>
 </html>
