--- a/typer.html
+++ b/typer.html
@@ -3,23 +3,78 @@
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
+			<link rel="stylesheet" href="css/style.css">
+
+	<style>
 		* {
 			margin: 0;
 			padding: 0;
 		}
 		html, body, canvas {
+			background-color: #F1C40F;
 			width: 100%;
 			height: 100%;
 		}
 		canvas {
 			position: absolute;
 		}
+
+		.countdown-timer {
+		  font-family: lato, sans-serif;
+		  top: 8px;
+		  left: 16px;
+		  margin: 0 auto;
+		  position: absolute;
+		}
+		.countdown-timer .timer {
+		  position: absolute;
+		  top: 50%;
+		  left: 50%;
+		  transform: translate(-50%, -50%);
+		  font-family: lato, sans-serif;
+		  font-size: 4em;
+		  color: black;
+		}
+		.countdown-timer .circle-container {
+		  transform: rotate(-90deg) rotate3d(1, 0, 0, 180deg);
+		}
+
+		.circle_animation {
+		  stroke-dasharray: 443;
+		  stroke-dashoffset: 0;
+		  top: 8px;
+		  left: 16px;
+		  transition: all 1s linear;
+		}
+
 	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+	<script src="js/TYPER.js"></script>
+    <script src="js/Word.js"></script>
+
 </head>
 <body>
-	<canvas></canvas>
+
+
+
+
+			<div class="countdown-timer">
+
+				<canvas id="bg" onclick="darkMode()"></canvas>
+
+			<div class="timer"></div>
+
+			<div class="circle-container">
+				<svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">
+				 <g>
+					<circle id="circle" class="circle_animation" r="69.85699" cy="81" cx="81" stroke-width="4" stroke="#E67E22" fill="none"/>
+				 </g>
+				</svg>
+			</div>
+		</div>
+			<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+				<script src="js/index.js"></script>
+
+
 </body>
 </html>
