typer.html -> typer.php to force refresh scores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Welcome to Typ3r!</h1>
         <p>Typ3r is a word typing game</p>
         <br>
-        <button class="btn" onclick="location.href='typer.html'">>>Play Typ3r!<<</button>
+        <button class="btn" onclick="location.href='typer.php'">>>Play Typ3r!<<</button>
     </div>
 </div>
 </body>
