--- a/typer.html
+++ b/typer.html
@@ -39,7 +39,7 @@
 						<h3><div class="gamerInfo3" id="gamerLives"></div></h3>
 						<div id="gameOver" class="gameOver"></div>
 						<canvas id="game" class="game"></canvas>
-						<button type="button" class="restart" id="restart">Uuesti</button>
+						<button type="button" class="restart" id="restartBTN">Uuesti</button>
         </div>
 
 	    </main>
