--- a/typer.html
+++ b/typer.html
@@ -3,23 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
+	<div>Game ends in <span id="time">02:00</span> minutes!</div>
 	<canvas></canvas>
+	<div class="game"
+	<p id="score">Score: 0</p>
+</div>
 </body>
 </html>
