Started working on localstorage saving (overwrites current player data)

--- a/Typer.html
+++ b/Typer.html
@@ -49,9 +49,9 @@
 			<table>
 				<thead>
 					<tr>
-						<th>ID</th>
 						<th>Player</th>
 						<th>Score</th>
+						<th>Mistakes</th>
 					</tr>
 				</thead>
 			</table>
