Muutsin aega 60 sekundile peale

--- a/typer.html
+++ b/typer.html
@@ -22,6 +22,7 @@
 
 			<div id="scores-view">
 				<h1>Statistika</h1>
+				<p>Siin lehel on näha, kui mitu viga mänga tegi. Vigade arv sõltub sellest, kui mitu tähte valesti trükitakse.</p>
 				<table id="statistics"></table>
 			</div>
 
