Everything works (css is not the best yet)

--- a/Typer.html
+++ b/Typer.html
@@ -20,20 +20,26 @@
 	
 		<!-- Home -->
 		<div id="home-view">
-			<h1>Welcome To TYPER!</h1>
-			<p>What is TYPER you may ask? Well to put it simply it's just a normal typing game but with Estonian words.</p>
-			<h1>How the game works:</h1>
-			<p>1.You start with 10 secs</p>
-			<p>2.Each word that you type in correctly gives you 1 point</p>
-			<p>3.Each word that you type in correctly adds an extra 2 seconds to your timer</p>
-			<p>4.If you make a mistake while typing, you lose 2 seconds</p>
-			<p>5.Simple as that - now go and have fun!</p>
+			<div class="introduction">
+				<h1>Welcome To TYPER!</h1>
+				<p>What is TYPER you may ask? Well to put it simply it's just a normal typing game but with Estonian words.</p>
+				<h2>How the game works:</h2>
+				<p>1.You start with 10 secs</p>
+				<p>2.Each word that you type in correctly gives you 1 point</p>
+				<p>3.Each word that you type in correctly adds an extra 2 seconds to your timer</p>
+				<p>4.If you make a mistake while typing, you lose 2 seconds</p>
+				<p>5.Simple as that - now go and have fun!</p>
+			</div>
+				<div id="top10" style="float: right;">
+					<h2 class="top10_header">The Top 10</h2>
+						<ul class="top10_players">
+					</ul>
+				</div>
 		</div>
 
 		<!-- Game -->
 		<div id="game-view">
 			<p class="loading">Loading....</p>
-			<br>
 			<p class="message">Get ready to start typing!</p>
 			<p id="score">Score: 0</p>
 			<p class="words-display">
@@ -46,12 +52,13 @@
 		<!-- Statistics -->
 		<div id="statistics-view">
 			<h1>Statistics</h1>
-			<table>
+			<table class="players_table">
 				<thead>
 					<tr>
 						<th>Player</th>
 						<th>Score</th>
 						<th>Mistakes</th>
+						<th>Accuracy</th>
 					</tr>
 				</thead>
 			</table>
