--- a/typer.html
+++ b/typer.html
@@ -1,23 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+	
+	<script class="txt"src="TYPER.js"></script>
+    <script class="txt" src="Word.js"></script>
 </head>
 <body>
 	<canvas></canvas>
