--- a/frontpage.html
+++ b/frontpage.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <title>typer</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+    <script src="topTen.js"></script>
 </head>
 <body>
-
+  <div id="top10" class="top10">
+        <h2 class="top10_header">The Top 10</h2>
+          <ul class="top10_players">
+        </ul>
+  </div>
 <div class="welcome">
     <div>
         <h1>Welcome to the Typer!</h1>
         <p>Game where you can test your typing skills and compete with other speedhackers</p>
         <button class="btn" onclick="location.href='typer.html'">Play Typer!</button>
     </div>
+
 </div>
 </body>
 </html>
