--- a/typer.html
+++ b/typer.html
@@ -9,9 +9,10 @@
     <script src="Word.js"></script>
 </head>
 <body>
-	<div>Game ends in <span id="time">02:00</span> minutes!</div>
+	<button id="exitBtn" class="btn">Exit game</button>
 	<canvas></canvas>
-	<div class="game"
+	<div class="game">
+		<div>Time: <span id="time">02:00</span></div>
 	<p id="score">Score: 0</p>
 </div>
 </body>
