--- a/frontpage.html
+++ b/frontpage.html
@@ -7,10 +7,12 @@
     <script src="topTen.js"></script>
 </head>
 <body>
+
   <div id="top10" class="top10">
+    <button id="statisticBtn" class="btn" onclick="location.href='statistics.html'">Show all statistics</button>
         <h2 class="top10_header">The Top 10</h2>
-          <ul class="top10_players">
-        </ul>
+          <ol class="top10_players">
+        </ol>
   </div>
 <div class="welcome">
     <div>
