--- a/statistics.html
+++ b/statistics.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div>
-	<button id="exitBtn" class="btn">Exit</button>
+	<button id="exitBtn" class="btn" onclick="location.href='frontpage.html'">Exit</button>
 	</div>
 	<div id="statistics" class="statistics">
 				<h2 class="statistics_header">The statistics</h2>
