--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Typer Game Menu</title>
 
-  <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css'>
 
-      <style>
+
+  <style>
+
   html, body {
   height: 100%;
   background: #313;
@@ -157,7 +158,7 @@
     cursor: pointer;
 }
 
-    </style>
+ </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
@@ -171,7 +172,7 @@
         <div class="element-wrapper"><span class="icon fa fa-gamepad" aria-hidden="true" > Typer game </span><br><br><span class="tag" href="typer.html">
             <button class="button" onclick="window.location.href='typer.html'">Start game</button></span>
         </div></a><a class="element two" href="#">
-        <div class="element-wrapper"><i class="icon fa fa-question" aria-hidden="true"> Instructions </i><br><br><span class="tag"> Type the Estonian word shown on screen as fast as you can and without making mistakes. Every mistake will make you lose points. You have 1 minute to make the best score you can.</span>
+        <div class="element-wrapper"><i class="icon fa fa-question" aria-hidden="true"> Instructions </i><br><br><span class="tag"> Type the Estonian word shown on screen as fast as you can and without making mistakes. You have 1 minute to make the best score you can.</span>
         </div></a><a class="element three" href="#">
         <div class="element-wrapper"><i class="fa fa-bar-chart" aria-hidden="true"> Top 10 players </i><br><br><span class="tag">scores</span>
 
