--- a/typer.html
+++ b/typer.html
@@ -1,26 +1,67 @@
 <!doctype html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
 <head>
-	<meta charset="UTF-8">
-	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Typer Game</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
 </head>
 <body>
-	<canvas></canvas>
+    <div id="nav" class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li><a href="#intro">Start</a></li>
+                <li><a href="#scores">High Scores</a></li>
+                <li><a href="#game" onclick="resetTimer();return false;">New Game</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="intro">
+        <p>Type the words as they are shown on the screen.</p>
+        <p>The faster you type them, the more score you get.</p>
+        <p>Miss a letter and it's game over!</p>
+        <br>
+        <h2>Instructions:</h2>
+        <p>1) Enter your name</p>
+        <p>2) Type the word on your screen. (Contains Estonian letters, make sure you can type the letters õäüö) </p>
+        <p>3) Press ENTER when no more letters are visible</p>
+        <p>4) A new word is shown</p>
+        <p>5) When you press a wrong button, the game will end.</p>
+        <br>
+        <p>Have fun!</p>
+    </div>
+
+    <div id="scores">
+        <h1>High scores</h1>
+        <table id="hiscoreTable" class="table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Score</th>
+                    <th>Words typed</th>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+        <a href="#nav">Back to top</a> <br>
+        <a href="#game" onclick="resetTimer();return false;">New game</a>
+    </div>
+
+    <div id="game">
+        <canvas></canvas>
+    </div>
+
+
+    <script src="TYPER.js"></script>
+    <script src="Word.js"></script>
 </body>
 </html>
