--- a/typer.html
+++ b/typer.html
@@ -29,11 +29,15 @@
         <p>Miss a letter and it's game over!</p>
         <br>
         <h2>Instructions:</h2>
-        <p>1) Enter your name</p>
-        <p>2) Type the word on your screen. (Contains Estonian letters, make sure you can type the letters õäüö) </p>
-        <p>3) Press ENTER when no more letters are visible</p>
-        <p>4) A new word is shown</p>
-        <p>5) When you press a wrong button, the game will end.</p>
+        <ol>
+            <li>Enter your name</li>
+            <li>Type the word on your screen. (Contains Estonian letters, make sure you can type the letters õäüö)</li>
+            <li>If you do not type the word in 10 seconds, you will get no points</li>
+            <li>Press ENTER when no more letters are visible</li>
+            <li>A new word is shown</li>
+            <li>When you press a wrong button, the game will end</li>
+            <li>You will get more points the longer you play!</li>
+        </ol>
         <br>
         <p>Have fun!</p>
     </div>
