--- a/typer.html
+++ b/typer.html
@@ -20,6 +20,7 @@
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+	<canvas style="z-index:1" id="kanvas"></canvas>
+	<button onclick="darkMode()" style="z-index:2; position:absolute">öö režiim</button>
 </body>
 </html>
