--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div></a><a class="element two" href="#">
         <div class="element-wrapper"><i class="icon fa fa-question" aria-hidden="true"> Instructions </i><br><br><span class="tag"> Type the Estonian word shown on screen as fast as you can and without making mistakes. You have 1 minute to make the best score you can.</span>
         </div></a><a class="element three" href="#">
-        <div class="element-wrapper"><i class="fa fa-bar-chart" aria-hidden="true"> Top 10 players </i><br><br><span class="tag" href="scores.php">
+        <div class="element-wrapper"><i class="icon fa fa-bar-chart" aria-hidden="true"> Top 10 players </i><br><br><span class="tag" href="scores.php">
           <button class="button2" onclick="window.location.href='scores.php'">View scores</button></span>
         </span>
 
