--- a/typer.html
+++ b/typer.html
@@ -17,6 +17,8 @@
 		}
 		canvas {
 			position: absolute;
+			width: 100%;
+			height: 100%;
 		}
 
 		.countdown-timer {
@@ -55,11 +57,11 @@
 <body>
 
 
-
+<canvas id="bg" onclick="darkMode()"></canvas>
 
 			<div class="countdown-timer">
 
-				<canvas id="bg" onclick="darkMode()"></canvas>
+
 
 			<div class="timer"></div>
 
