--- a/typer.html
+++ b/typer.html
@@ -19,7 +19,7 @@
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
-<body id="changecolor">
-	<canvas id="changecolorw"></canvas>
+<body>
+	<canvas></canvas>
 </body>
 </html>
