--- a/typer.html
+++ b/typer.html
@@ -16,6 +16,7 @@
 		
 		<h1>Typer</h1>
 		<input id="StartButton" type="button" value="Press me to start!"/>
+		<div id="player" onmouseover="results()">Mouse on me to find out results</div>
 		
 	</div>
 	
@@ -23,6 +24,7 @@
 	<canvas id="GameCanvas">Game Stuff</canvas>
 		<div class="newGame" >
 			 <p id="timer"></p>
+			 <p id="player_score"></p>
 		</div>
 	</div>
 	
