--- a/typer.html
+++ b/typer.html
@@ -16,7 +16,7 @@
 		
 		<h1>Typer</h1>
 		<input id="StartButton" type="button" value="Press me to start!"/>
-		<div id="player" onmouseover="results()">Mouse on me to find out results</div>
+		<div id="player" onmouseover="run_once()">Mouse on me to find out results</div>
 		
 	</div>
 	
