--- a/typer.html
+++ b/typer.html
@@ -1,25 +1,54 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
+	<style>
+		p {
+				padding: 5%;
+				font-size: 125%;
+				font-family: 'VT323', monospace;
 		}
 	</style>
 	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+	<script src="Word.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
+
+
 </head>
+
 <body>
-	<canvas></canvas>
+	<div id="menu">
+		<audio id="startAudio" src="meowsong.wav"></audio>
+		<audio id="endAudio" src="tvstatic.wav"></audio>
+		<button class="btn" onclick="location.href='index.html'">Back</button>
+	</div>
+
+	<div id="canvas">
+		<canvas></canvas>
+	
+	</div>
+	<div id="playerStats">
+	<p>Aeg: <span id="time"></span></p>
+
+		<p id="score">:</p>
+		<p >dark mode:</p>
+		<div id="switchNight">
+			<label class="switchNight">
+			<input type="checkbox" onclick="darkMode()">
+			</label>
+		</div>
+		<p >color mode:</p>
+		<div id="switchColor">
+			<label class="switchColor">
+			<input type="checkbox" onclick="colorMode()">
+			</label>
+		</div>
+
+	</div>
+
 </body>
+
 </html>
