teine kodutöö valmis

--- a/typer.html
+++ b/typer.html
@@ -24,11 +24,16 @@
 						<p>
 							Tegemist on väga ägeda mänguga, mille eesmärgiks on võimalikult kiiresti ekraanile ilmuvaid sõnu kirjutada !
 						</p>
+						<br>
+						<button><a href="#game-view">Mängima</a></button>
+						</form>
 
 						<h1>Top 10</h1>
-						<div id="topPlayers"></div>
-						<br><br>
-						<button type="button"><a href="#game-view">Mängima</a></button>
+						<div id="top10" class="top10">
+							<button type="button" id="loadTopTen"> Lae top 10 !</button>
+							<div class="topTenPlayers" id="topTenPlayers"></div>
+						</div>
+
 						<p>Autor: Tanel Otsa</p>
         </div>
 
