--- a/typer.html
+++ b/typer.html
@@ -3,23 +3,47 @@
 <head>
 	<meta charset="UTF-8">
 	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<canvas></canvas>
+	
+	<nav class="menu">
+		<ul class="menu-list">
+			<li class="menu-item"><a href="#home-view" class="menu-link home-view">Algus</a></li>
+			<li class="menu-item"><a href="#game-view" class="menu-link game-view">Mäng</a></li>
+			<br><br><br>
+		</ul>
+	</nav>
+	
+	
+	<main role="main">
+	
+		<div class="views" id="game-view">
+			<canvas></canvas>
+			<div class="info-container" id="info-container">
+				<ul class="game-info" id="info">
+					<li class="player-info" id="playerName">Nimi</li>
+					<li class="player-info" id="playerScore">Skoor</li>
+					<li class="player-info" id="timeRemaining">Aeg</li>
+					<li class="player-info" id="guessedWords">Arvatud sõnu</li>
+					<li class="player-info" id="livesLeft">Elusid alles</li>
+					<li class="player-info" id="justForTest">Test</li>
+					<li class="player-info" id="justForTest2">Test</li>
+					<li class="player-info" id="justForTest3">Test</li>
+				</ul>
+				<button id="startGame">Alusta</button>
+			</div>
+		</div>
+		
+		<div class="views" id="home-view">
+			<p>tere, see on esimene leht</p>
+		</div>
+	
+	</main>
+	
+	
 </body>
 </html>
