--- a/typer.html
+++ b/typer.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -21,5 +21,13 @@
 </head>
 <body>
 	<canvas></canvas>
+	<h2>Tutvustus</h2>
+	<p>Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida.
+		Sõnad võetud Eesti Keele Instituudi lehelt.</p>
+	<br>
+	<h3>Sisesta oma nimi:</h3>
+	<input type="text" name="name">
+	<input type="submit" value="Start">
+	<h2>TOP 10 edetabel</h2>
 </body>
 </html>
