localstorage toimib, top10 veel pole

--- a/typer.html
+++ b/typer.html
@@ -34,7 +34,12 @@
 					<li class="player-info" id="justForTest2">Test</li>
 					<li class="player-info" id="justForTest3">Test</li>
 				</ul>
+				<br>
+				<ul class="playerList"></ul>
+				<br>
 				<button id="startGame">Alusta</button>
+				<br>
+				<button id="proov">Proov</button>
 			</div>
 		</div>
 		
