--- a/typer.html
+++ b/typer.html
@@ -21,13 +21,16 @@
 </head>
 <body>
 	<canvas></canvas>
-	<h2>Tutvustus</h2>
-	<p>Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida.
-		Sõnad võetud Eesti Keele Instituudi lehelt.</p>
-	<br>
-	<h3>Sisesta oma nimi:</h3>
-	<input type="text" name="name">
-	<input type="submit" value="Start">
-	<h2>TOP 10 edetabel</h2>
+	<div id="info">
+		<div id="intro">
+			<h2>Tutvustus</h2>
+			<p>Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida.
+				Sõnad võetud Eesti Keele Instituudi lehelt.</p>
+		</div>
+		<div id="top">
+			<h2>TOP 10 edetabel</h2>
+		</div>
+	</div>
+
 </body>
 </html>
