--- a/typer.html
+++ b/typer.html
@@ -2,20 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
+	<title>Typer</title>
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
@@ -24,11 +13,11 @@
 	<div id="info">
 		<div id="intro">
 			<h2>Tutvustus</h2>
-			<p>Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida.
+			<p style="font-family:helvetica">Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida.<br>
 				Sõnad võetud Eesti Keele Instituudi lehelt.</p>
 		</div>
-		<div id="top">
-			<h2>TOP 10 edetabel</h2>
+		<div id="top" class="rainbow">
+			<p>TOP 10 edetabel</p>
 		</div>
 	</div>
 
