fixed score button

--- a/tutvustus.html
+++ b/tutvustus.html
@@ -38,8 +38,8 @@ h1{
 
 <a class="link" href="typer.html">MÄNGIMA!</a>
 
-<button type="button" id="player" onclick="playerName()">Skoor</button>
-
+<a id="player" onclick="playerName()" style="border:1px solid; cursor: url('ikoon.ico'), default;">SKOOR</a>
+<div id="top" class="top10"></div>
 </body>
 </head>
 </html>
