--- a/typer.html
+++ b/typer.html
@@ -34,17 +34,18 @@
 					<li class="player-info" id="justForTest2">Test</li>
 					<li class="player-info" id="justForTest3">Test</li>
 				</ul>
-				<br>
-				<ul class="playerList"></ul>
-				<br>
+				
 				<button id="startGame">Alusta</button>
-				<br>
-				<button id="proov">Proov</button>
+				
 			</div>
 		</div>
 		
 		<div class="views" id="home-view">
-			<p>tere, see on esimene leht</p>
+			<p>tere, see on esimene leht</p><br>
+			<h1>Top 10</h1>
+			<div id="listContainer">
+				<ul id="playerList"></ul>
+			</div>
 		</div>
 	
 	</main>
