--- a/typer.html
+++ b/typer.html
@@ -21,6 +21,7 @@
 			Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida. <br>
 			<input type="text" id="name" placeholder="name">
 			<a href="#game-view">Start</a>
+			<span id="table"></span>
 		</div>
 
 		<div id="game-view">
