--- a/typer.html
+++ b/typer.html
@@ -1,25 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang = "en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset = "UTF-8">
 	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+	<script src = "TYPER.js"></script>
+	<script src = "Word.js"></script>
+	<link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-	<canvas></canvas>
+<canvas></canvas>
 </body>
 </html>
