--- a/typer.html
+++ b/typer.html
@@ -21,7 +21,10 @@
 			Mängu eesmärk on võimalikult kiiresti ekraanile tekkivaid sõnu ära trükkida. <br>
 			<input type="text" id="name" placeholder="name">
 			<a href="#game-view">Start</a>
-			<span id="table"></span>
+			<h1>Top 10</h1>
+			<table class="scoreBoard"></table>
+			<a href="#statistics-view">Statistika</a>
+
 		</div>
 
 		<div id="game-view">
@@ -37,7 +40,12 @@
 
 		<div id="end-view">
 			<h1>END</h1>
-			<ul class="list-of-jars"></ul>
+			<a href="#home-view">Start again</a>
+
+
+		</div>
+		<div id="statistics-view">
+			<table class="statistics"></table>
 
 		</div>
 
