--- a/typer.html
+++ b/typer.html
@@ -1,25 +1,17 @@
-<!doctype html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>typer</title>
-	<style> 
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html, body, canvas {
-			width: 100%;
-			height: 100%;
-		}
-		canvas {
-			position: absolute;
-		}
-	</style>
+	<meta charset="UTF-8"> 
+	<title>Klahver</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
+	<button id="exit" class="button">Välju</button>
 	<canvas></canvas>
+	<div class="stats">
+		<div>Aeg: <span id="time">01:00</span></div>
+		<p id="score">Punkte: 0</p>
+</div>
 </body>
 </html>
