Nupp muudetud eestikeelseks

--- a/statistics.html
+++ b/statistics.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div>
-	<button id="exit" class="button" onclick="location.href='start.html'">Exit</button>
+	<button id="exit" class="button" onclick="location.href='start.html'">Välju</button>
 	<button id="statplay" class="button" onclick="location.href='typer.html'">Mine Mängima</button>
 	</div>
 	<div id="statistics" class="statistics">
