--- a/typer.html
+++ b/typer.html
@@ -14,12 +14,13 @@
 		}
 		canvas {
 			position: absolute;
+			background: url(9057085f1d875f6bf3e3ed78bb8fde5b.jpg)
 		}
 	</style>
 	<script src="TYPER.js"></script>
     <script src="Word.js"></script>
 </head>
 <body>
-	<canvas></canvas>
+	<canvas id="canvas"></canvas>
 </body>
 </html>
