Tutvustuselehelt küsib nime ja salvestab Local Storage'sse.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
 	<title>Welcome</title>
 	
 	<!-- Latest compiled and minified CSS -->
-	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-	      integrity = "sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	      crossorigin = "anonymous">
-	
+	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity = "sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"  crossorigin = "anonymous">
 	<!-- Optional theme -->
-	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-	      integrity = "sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-	      crossorigin = "anonymous">
-	
+	<link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity = "sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin = "anonymous">
 	<!-- Latest compiled and minified JavaScript -->
-	<script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-	        integrity = "sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-	        crossorigin = "anonymous"></script>
+	<script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity = "sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin = "anonymous"></script>
+	<script src="Player.js"></script>
 </head>
 <body>
 
@@ -29,8 +22,7 @@
 	<p>Edu!</p>
 	
 	<!-- Text input-->
-	<input id = "name-area" name = "name-area" type = "text" placeholder = "Sisestage oma nimi"
-	       class = "form-control input-md" required = "">
+	<input id = "name-area" name = "name-area" type = "text" placeholder = "Sisestage oma nimi" required = "">
 	
 	<!-- Button -->
 	<button id = "submit" name = "submit" class = "btn btn-inverse">Saada</button>
