Sorteerib kõikide mängijate andmeid local storages nende skoori järgi.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,52 @@
 
 
 <div>
-	<h1>Top 5 mängijad</h1>
+    <h1>Top 10 mängijad</h1>
 	<table id = "score-table">
-		<tr>
-			<td>Nimi</td>
-			<td>Skoor</td>
-		</tr>
+        <tr>
+            <th>Nimi</th>
+            <th>Skoor</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
 	</table>
 </div>
 
