Kenamavõitu tabel näitab top 10 inimese skoori ära.

--- a/index.html
+++ b/index.html
@@ -31,52 +31,7 @@
 
 <div>
     <h1>Top 10 mängijad</h1>
-	<table id = "score-table">
-        <tr>
-            <th>Nimi</th>
-            <th>Skoor</th>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-	</table>
+    <table id="score-table" class="table"></table>
 </div>
 
 <div>
