css stiili muutumine, kogu web design

--- a/text/3leaders.html
+++ b/text/3leaders.html
@@ -1,3 +1,20 @@
 <html>
-View list
+<html>
+	
+	<head>
+	
+		<link rel="stylesheet" type="text/css" href="font.css">
+	
+	</head>
+
+
+	<center>
+	
+		<div>
+		
+		<h1><font class="red">LEADER</font> BOARD:</h1>
+		</div>
+	
+	</center>
+
 </html>
