--- a/typer.html
+++ b/typer.html
@@ -23,3 +23,13 @@
 	<canvas></canvas>
 </body>
 </html>
+<!doctype html>
+<html lang="adasd">
+<head>
+    <meta charset="UTF-8">
+    <title>adsa</title>
+</head>
+<body>
+
+</body>
+</html>
