--- a/text/1start_play.html
+++ b/text/1start_play.html
@@ -1,3 +1,26 @@
 <html>
-	<a href="javascript:window.open('../typer.html','popup')">Start game</a>
+<html>
+	
+	<head>
+	
+		<link rel="stylesheet" type="text/css" href="font.css">
+	
+	</head>
+
+
+	<div>
+	
+		<center>	
+			<h1> 
+			LETS <a href="javascript:window.open('../TYPER.js','popup')">START</a> TYPER GAME
+			</h1>
+		</center>
+				<h2>
+				<li>DONT KNOW HO TO PLAY ? <a href="javascript:window.open('2howto.html','_self')">CLICK HERE</a></li>
+				<li>WANT TO SEE SCORES ? <a href="javascript:window.open('3leaders.html','_self')">CLICK HERE</a></li>
+				<li>WHAT IT'S ALL ABOUT ? <a href="javascript:window.open('4about.html','_self')">CLICK HERE</a></li>
+				</h2>
+		
+	</div>
+
 </html>
