--- a/typer.html
+++ b/typer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>typer</title>
+	<title>Typer</title>
 	<style> 
 		* {
 			margin: 0;
@@ -14,10 +14,10 @@
 		}
 		canvas {
 			position: absolute;
+			background-color: FFF;
 		}
 	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
+	<script src="typer.js"></script>
 </head>
 <body>
 	<canvas></canvas>
