testing typer timer

--- a/text/1start_play.html
+++ b/text/1start_play.html
@@ -12,7 +12,7 @@
 	
 		<center>	
 			<h1> 
-			LETS <a href="javascript:window.open('../TYPER.js','popup')">START</a> TYPER GAME
+			LETS <a href="javascript:window.open('../typer.html','popup')">START</a> TYPER GAME
 			</h1>
 		</center>
 				<h2>
