--- a/typer.html
+++ b/typer.html
@@ -9,6 +9,7 @@
 			padding: 0;
 		}
 		html, body, canvas {
+			background-image: url(image/6pattern.png);
 			width: 100%;
 			height: 100%;
 		}
@@ -16,8 +17,6 @@
 			position: absolute;
 		}
 	</style>
-	<script src="TYPER.js"></script>
-    <script src="Word.js"></script>
 </head>
 <body>
 	<canvas></canvas>
@@ -30,6 +29,10 @@
     <title>adsa</title>
 </head>
 <body>
+<p><span id="time"></span></p>
+	
+	<script src="TYPER.js"></script>
 
+	
 </body>
 </html>
