--- a/text/1start_play.html
+++ b/text/1start_play.html
@@ -16,11 +16,11 @@
 			</h1>
 		</center>
 				<h2>
-				<li>DONT KNOW HO TO PLAY ? <a href="javascript:window.open('2howto.html','_self')">CLICK HERE</a></li>
-				<li>WANT TO SEE SCORES ? <a href="javascript:window.open('3leaders.html','_self')">CLICK HERE</a></li>
+				<li>DONT KNOW HOW TO PLAY ? <a href="javascript:window.open('2howto.html','_self')">CLICK HERE</a></li>
+				<li>WANT TO SEE WHO IS LEADING NOW ? <a href="javascript:window.open('3leaders.html','_self')">CLICK HERE</a></li>
 				<li>WHAT IT'S ALL ABOUT ? <a href="javascript:window.open('4about.html','_self')">CLICK HERE</a></li>
 				</h2>
-		
+	
 	</div>
 
 </html>
