changed TYPER.js score problems  and typer.html added back button

--- a/typer.html
+++ b/typer.html
@@ -24,11 +24,14 @@
 			}
 			
 			#info {
-				background: url();
 				position: fixed;
-				border: none;
 				left: 5%;
 				text-align: left;
+			}
+			#back{
+				position: fixed;
+				left:5%;
+				bottom:10%;
 			}
 			
 		</style>
@@ -56,8 +59,11 @@
 
 	</div>
 	
-
-
+	<div id="back">
+		
+		<h2><a href="1page.html">GO BACK</a></h2>
+	
+	</div>
 	
 </body>
 </html>
